# geppetto

./: .gitignore  .python-version  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.sh
geppetto/: __meta__.py  dataset.py  model.py  test.py
