[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

name = "geppetto"
description = "Custom GPT-3 models in PyTorch for Maxwell"
authors = [
    {name = "Marcel Rieger", email = "github.riga@icloud.com"},
]
keywords = [
    "gpt",
    "maxwell"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]


[project.urls]

Homepage = "https://github.com/riga/geppetto"
Repository = "https://github.com/riga/geppetto.git"


[tool.setuptools.dynamic]

version = {attr = "geppetto.__meta__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}


[tool.setuptools]

include-package-data = false


[tool.setuptools.packages.find]

include = ["geppetto"]
exclude = ["tests/*"]


[tool.mypy]

disable_error_code = ["no-redef", "valid-type", "method-assign"]
